Checking the updated Jupyter notebook

--- a/100_days_of_code_notes_jupyter_nb/Pythonic code .ipynb
+++ b/100_days_of_code_notes_jupyter_nb/Pythonic code .ipynb
@@ -288,6 +288,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A good problem on dictionaries\n",
+    "https://snakify.org/lessons/dictionaries_dicts/problems/frequency_analysis/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First iteration\n",
+    "n = int(input())\n",
+    "\n",
+    "words = {}\n",
+    "for _ in range(n):\n",
+    "    for word in input().split():\n",
+    "        words[word] = words.get(word, 0) + 1\n",
+    "        \n",
+    "freqs = [(-count, word) for word, count in words.items()]\n",
+    "for c, w in sorted(freqs):\n",
+    "    print(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Second one using Counter\n",
+    "from collections import Counter\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "words = []\n",
+    "for _ in range(n):\n",
+    "    words.extend(input().split())\n",
+    "\n",
+    "freqs = Counter(words)\n",
+    "pairs = [(-count, word) for word, count in freqs.most_common()]\n",
+    "for c, w in sorted(pairs):\n",
+    "    print(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'apple - malum, pomum, popula'.split(',')\n",
+    "print(e)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
